fixed generic layout problems

--- a/src/sass/helpers.sass
+++ b/src/sass/helpers.sass
@@ -27,6 +27,9 @@
 .section
   margin-top: $outer-spacing
 
+  &:first-child
+    margin-top: 0
+
 .element
   margin-top: $inner-spacing
 
